--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -89,7 +89,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "offense = pd.read_csv('C:/Users/Matthew/Documents/CMDA 3654 - Intro to Data Analytics and Visualization/R/Datasets/College Football Offense.csv')"
+      "offense = pd.read_csv('~/Documents/CMDA 3654/R/Datasets/Offense.csv')"
      ],
      "language": "python",
      "metadata": {},
@@ -100,7 +100,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "defense = pd.read_csv('C:/Users/Matthew/Documents/CMDA 3654 - Intro to Data Analytics and Visualization/R/Datasets/Defense.csv')"
+      "defense = pd.read_csv('~/Documents/CMDA 3654/R/Datasets/Defense.csv')"
      ],
      "language": "python",
      "metadata": {},
@@ -111,7 +111,7 @@
      "cell_type": "code",
      "collapsed": true,
      "input": [
-      "punting = pd.read_csv('C:/Users/Matthew/Documents/CMDA 3654 - Intro to Data Analytics and Visualization/R/Datasets/College Football Punting.csv')"
+      "punting = pd.read_csv('~/Documents/CMDA 3654/R/Datasets/Punting.csv')"
      ],
      "language": "python",
      "metadata": {},
